2018-10-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): test for presence of image converted from
	pdf file.
	added support for conversion of eps files to the current picture format.


2018-10-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (graphicx.4ht): defined configurations for \rotatebox
	* tex4ht-html4.tex (html4.4ht): configured \rotatebox
	https://tex.stackexchange.com/a/453376/2891

2018-09-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (titlesec.4ht): fix for the runin and display formats.
	https://tex.stackexchange.com/q/451077/2891

2018-09-08  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex-chicago.4ht): fix for correct punctuation.

2018-09-02  Karl Berry  <karl@freefriends.org>

	* tex4ht-unicode.tex: copyright.

2018-09-02  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-unicode.tex (unicode.4ht): fixed definition of
	\x:unicode to use the same pattern for declaration of Unicode
	characters as the rest of tex4ht sources.

	* tex4ht-html4.4ht (html4.4ht): added \ttfamily to the listings-init
	configuration. It fixes some issues when listings are used inside the
	\Picture*.

2018-08-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (tuenc-luatex.4ht): added vpack_filter
	callback, in order to process all characters.
	* tex4ht-4ht.tex (latex.4ht): load tuenc.def to get definitions
	for text symbols.

2018-07-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): removed &nbsp; entity from
	configuration for HBorder, it caused Xtpipes error.

2018-07-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): removed all DOCTYPE
	definitions, they cause validation failure in
	https://odfvalidator.org/.
	* tex4ht-ooffice.tex (ooffice-mml.4ht): fixed mime type.
	Replaced literal math: prefix with \a:mathml in some configurations.
	Configured \Configure{mathml} to not use a prefix at all.