@@ -2,7 +2,7 @@
 \special{t4ht+@File: style.css}
 \Configure{@HEAD}{\HCode{<link rel="stylesheet" type="text/css" href="style.css" />}}
 \Configure{texttt}{\HCode{<code>}\NoFonts}{\EndNoFonts\HCode{</code>}}
-\ConfigureEnv{texsource}{\ifvmode\IgnorePar\fi\EndP\HCode{<figure>}}{\ifvmode\IgnorePar\fi\EndP\HCode{</figure>}}{}{}
+\ConfigureEnv{texsource}{\ifvmode\IgnorePar\fi\EndP\HCode{<figure class="texsource">}}{\ifvmode\IgnorePar\fi\EndP\HCode{</figure>}}{}{}
 \ConfigureEnv{shellcommand}{\ifvmode\IgnorePar\fi\EndP\HCode{<figure>}}{\ifvmode\IgnorePar\fi\EndP\HCode{</figure>}}{}{}
 \ConfigureEnv{htmlsource}{\ifvmode\IgnorePar\fi\EndP\HCode{<figure>}}{\ifvmode\IgnorePar\fi\EndP\HCode{</figure>}}{}{}
 
